# mcp-server-youtube

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  audit.toml  flake.nix  pyproject.toml  smithery.yaml
.config/: nextest.toml
.github/workflows/: check.yml  integration.yml  release.yaml
docs/superpowers/specs/: 2026-03-13-multi-key-rotation-design.md
src/: config.rs  errors.rs  key_pool.rs  lib.rs  main.rs  params.rs  server.rs  youtube.rs
tests/: config_test.rs  integration_test.rs
